--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,11 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+$green-primary: '#00ffe9';
+$purple-secondary: '#766eff';
+$blue-hover: '#2417ff';
+
+// Fonts
+
+@import 'generalStyles';
