--- a/assets/generalStyles.scss
+++ b/assets/generalStyles.scss
@@ -1,27 +1,51 @@
-$general-font: 'Poppins', sans-serif;
-$title-font: 'Poiret One', cursive;
-
 body,
 body::before,
 body::before {
   font-family: $general-font !important;
 }
 
-h1 {
+h1,
+h2 {
   font-family: $title-font !important;
+  font-weight: 700;
+}
+h1 {
   font-size: 4.6rem;
 }
 
-h2 {
+h2.section__title {
+  font-size: 3rem;
+  color: #383838;
+}
+
+h3,
+.nav__link {
   font-size: 1.1rem;
-  font-weight: 400;
+  color: #fff;
+  font-weight: 500;
 }
 
 a {
   text-decoration: none;
   &:hover {
-    color: rgba($color: #fff, $alpha: 0.5);
+    color: rgba($color: rgb(238, 238, 238), $alpha: 0.5);
   }
+}
+
+section {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.section__subtitle {
+  font-size: 2rem;
+  line-height: 1.5;
+}
+
+img,
+iframe {
+  display: block;
+  max-width: 100%;
 }
 ul,
 .list {
@@ -43,25 +67,7 @@ ul,
   word-wrap: break-word;
 }
 
-@mixin respond($breakpoint) {
-  @if $breakpoint == phone {
-    @media only screen and (max-width: 37.5em) {
-      @content;
-    } //600px
-  }
-  @if $breakpoint == tab-port {
-    @media only screen and (max-width: 56.25em) {
-      @content;
-    } //900px
-  }
-  @if $breakpoint == tab-land {
-    @media only screen and (max-width: 75em) {
-      @content;
-    } //1200px
-  }
-  @if $breakpoint == big-desktop {
-    @media only screen and (min-width: 112.5em) {
-      @content;
-    } //1800
-  }
+.text__special {
+  font-size: 2rem;
+  font-family: $special-font;
 }
