finishing the home (w/o RWD)

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -14,5 +14,7 @@ $general-font: 'Poppins', sans-serif;
 $title-font: 'Poiret One', cursive;
 $special-font: 'Jost', sans-serif;
 
+$carousel-controls-bg: rgba(0, 0, 0, 0.02);
+
 @import 'mixins';
 @import 'generalStyles';
