--- a/assets/generalStyles.scss
+++ b/assets/generalStyles.scss
@@ -92,3 +92,19 @@ ul,
 .font-purple {
   color: $purple-secondary;
 }
+
+.card__title {
+  font-family: $title-font;
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 1;
+}
+.card__subtitle {
+  font-size: 1.2rem;
+  color: #bbb;
+  font-weight: 400;
+}
+.card__text {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
