--- a/assets/generalStyles.scss
+++ b/assets/generalStyles.scss
@@ -119,3 +119,15 @@ ul,
   font-size: 1.2rem;
   font-weight: 400;
 }
+
+// Animations
+
+.before-enter {
+  opacity: 0;
+  transform: translateY(200px);
+  transition: all 0.5s ease-out;
+}
+.enter {
+  opacity: 1;
+  transform: translateY(0);
+}
