new font added to navbar

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -10,7 +10,7 @@ $blue-hover: #2417ff;
 
 // Fonts
 
-$general-font: 'Poppins', sans-serif;
+$general-font: 'Open Sans', sans-serif;
 $title-font: 'Poiret One', cursive;
 $special-font: 'Jost', sans-serif;
 
